<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ui.admin.AdminProductFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnAdminProductAdd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_add"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/btnAdminProductDel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_del"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAdminProductAdd"
            android:layout_marginTop="40dp"/>
        <Button
            android:id="@+id/btnAdminProductModify"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_modify"
            android:text="@string/modify"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAdminProductDel"
            android:layout_marginTop="40dp"/>
        <Button
            android:id="@+id/btnAdminProductBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/button"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></Button>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>