<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">
    
    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/login_logo"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLoginLogo"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="95dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#EF6C00"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_below="@+id/imgLoginLogo"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:text="@string/login"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/input"
        android:text="@string/register"
        tools:ignore="VisualLintButtonSize" />


</RelativeLayout>